compiler/testData/diagnostics/tests/typedefs/TypedefsUnsupported.kt
<!UNSUPPORTED!>typealias Foo = Any<!>

fun foo() {
    <!UNSUPPORTED!>typealias Bar = Any<!>
}